Se implementa el sistema de notificación de SSE para stocks bajos y la función de la API del USD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.username=root
 spring.datasource.password=
 
 # --- Configuración de Hibernate ---
-# ✅ CORRECCIÓN FINAL: Cambiamos 'update' a 'create-drop'.
+#  Cambiamos 'update' a 'create-drop'.
 # 'create-drop' BORRA toda la base de datos al iniciar y la vuelve a crear.
 # Esto asegura que el script data.sql siempre se ejecute sobre una BD limpia,
 # eliminando el error de "Duplicate entry".
